tests/NormalTests/paczka1/small_fuzzy/24773747.err
Error in line 1: aeP3GzhG S507 15,7
Error in line 7: A399 S507 58,6
Error in line 11: A399 A600 35,0
